# server.js
@@ -23,7 +23,14 @@ app.use((req, res, next) => {
 });
 
 app.use("/", require("./routes"));
-app.use("/users", require("./routes/contact"));
+app.use("/temples", require("./routes/temple"));
+
+process.on("uncaughtException", (err, origin) => {
+	console.log(
+		process.stderr.fd,
+		`Caught exception: ${err}\n` + `Exception origin: ${origin}`,
+	);
+});
 
 mongodb.initDb((err) => {
 	if (err) {
